Fixing the loading indicator z-index

--- a/Packages/ohif-viewerbase/client/components/viewer/loadingIndicator/loadingIndicator.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/loadingIndicator/loadingIndicator.styl
@@ -27,7 +27,7 @@
   position: absolute
   top: 0
   width: 100%
-  z-index: 100
+  z-index: 1
 
   .indicatorContents
     font-size: 30px
